# sensai

./: .gitignore  CLAUDE.md  Dockerfile  app.py  demo_tts.py  docker-compose.yml  example_tts.py  pyproject.toml  requirements.txt  requirements_tts.txt  test_tts.py  tmp.ipynb
.streamlit/: config.toml
src/components/: learning_path.py  quiz.py  quiz_results.py  slide_display.py  topic_selection.py
src/utils/: __init__.py  text_to_speech.py  tts_integration_example.py
